# SoftwareSystems

./: .gitignore  README.md
1-concurrency/: Cargo.toml  README.md
1-concurrency/src/: grep_rayon.rs  grep_result.rs  grep_std.rs  main.rs  util.rs
2-performance/: .gitignore  Cargo.toml  README.md
2-performance/benches/: my_bench.rs
2-performance/configurations/: reference.yml
2-performance/src/: lib.rs  main.rs
3-embedded/: .gitignore  Cargo.toml  README.md
3-embedded/.cargo/: config.toml
3-embedded/common_lib/: Cargo.toml
3-embedded/common_lib/src/: lib.rs
3-embedded/embedded-code/: Cargo.toml  build.rs
3-embedded/embedded-code/src/: exceptions.rs  main.rs  mutex.rs  ringbuffer.rs  uart.rs
3-embedded/embedded-code/src/drawing/: brightness.rs  font.rs  mod.rs  screen.rs
3-embedded/runner/: Cargo.toml
4-uml/: README.md  README_and_REPORT.md  class-database.puml  class-high-level.puml  component.puml  ex1_browser-based_training_system.puml  sequence-config.puml  sequence-pedal-1.puml  sequence-pedal-2.puml
4-uml/tutorial/: egA1_actors_and_use_cases.puml  egA2_associations.puml  egA3_system_boundary.puml  egA4_simple_checkout_example.puml  egA5_scale_checker_example.puml  egB1_components_and_interfaces.puml  egB2_connecting_interfaces.puml  egB3_packages_and_databases.puml  egC1_rust_to_class_1.puml  egC1_rust_to_class_2.puml  egC2_constructing_class.puml  egC3_public_private.puml  egC4_cardinality.puml  egC5_class_relations.puml  egD1_participant.puml  (+5 more)
5-fsm/: .gitignore  README.md
6-dsl/: .gitignore  README.md  Reference.md
(+86 files in other folders)
