[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"], default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["use-crc", "alloc"]}
crc = "3.0.1"