[package]
name = "embedded-assignment-embedded"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
# https://www.ti.com/lit/ds/symlink/lm3s6965.pdf
tudelft-lm3s6965-pac = {version = "0.1", features = ["rt"]}
ringbuffer  = {version =  "0.15.0", default-features = false}
embedded-alloc = "0.5.1"