[package]
name = "embedded-assignment-embedded"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
# https://www.ti.com/lit/ds/symlink/lm3s6965.pdf
tudelft-lm3s6965-pac = {version = "0.1", features = ["rt"]}
common_lib = { path = "../common_lib"}
emballoc = "0.2.0"
serde = { version = "1.0.193", features = ["derive"], default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["use-crc", "alloc"]}
crc = "3.0.1"